--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,13 @@
     "name": "arnoldkouya/lara-coming-soon",
     "description": "A Laravel package for managing maintenance modes with IP whitelisting",
     "type": "library",
+    "license": "MIT",
+    "authors": [
+      {
+        "name": "Arnold Kouya",
+        "email": "your-email@example.com"
+      }
+    ],
     "autoload": {
         "psr-4": {
             "ArnoldKouya\\LaraComingSoon\\": "src/"
