--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
       {
         "name": "Arnold Kouya",
-        "email": "your-email@example.com"
+        "email": "arnoldkouya@gmail.com"
       }
     ],
     "autoload": {
