--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "arnoldkouya/lara-coming-soon",
+    "name": "arnoldkouya/laravel-coming-soon",
     "description": "A Laravel package for managing maintenance modes with IP whitelisting",
     "type": "library",
     "license": "MIT",
     "authors": [
-      {
-        "name": "Arnold Kouya",
-        "email": "arnoldkouya@gmail.com"
-      }
+        {
+            "name": "Arnold Kouya",
+            "email": "arnoldkouya@gmail.com"
+        }
     ],
     "autoload": {
         "psr-4": {
@@ -16,10 +16,13 @@
     },
     "require": {
         "php": ">=8.0",
-        "illuminate/support": "^8.0|^9.0|^10.0",
-        "illuminate/http": "^8.0|^9.0|^10.0",
-        "illuminate/database": "^8.0|^9.0|^10.0",
-        "illuminate/routing": "^8.0|^9.0|^10.0"
+        "illuminate/support": "^8.0 || ^9.0 || ^10.0",
+        "illuminate/http": "^8.0 || ^9.0 || ^10.0",
+        "illuminate/database": "^8.0 || ^9.0 || ^10.0",
+        "illuminate/routing": "^8.0 || ^9.0 || ^10.0"
+    },
+    "conflict": {
+        "illuminate/support": "<8.0"
     },
     "extra": {
         "laravel": {
@@ -27,5 +30,7 @@
                 "ArnoldKouya\\LaraComingSoon\\LaraComingSoonServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
